--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -8,6 +8,11 @@
     min-height: 0;
 }
 
+/* Fix for https://github.com/Alexays/Waybar/issues/1741 */
+label {
+    all: unset;
+}
+
 window#waybar {
     background: #121417;
     /*border-bottom: 3px solid rgba(100, 114, 125, 0.5);*/
